[gd_scene format=3 uid="uid://cdru8op2dkwwx"]

[ext_resource type="Texture2D" uid="uid://ot636l6ixfhf" path="res://assets/printer.png" id="1_4lrxx"]
[ext_resource type="Script" uid="uid://b5thejmg2eu4x" path="res://scripts/machines/printer_controller.gd" id="1_jf8il"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.3, 0.3, 0.3, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.95, 0.6, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.4, 0.4, 0.4, 0.8)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Printer" type="Control" unique_id=482215309]
layout_mode = 3
anchor_right = 0.17600001
anchor_bottom = 0.24700001
offset_right = -202.75201
offset_bottom = -160.056
script = ExtResource("1_jf8il")

[node name="texture" type="TextureRect" parent="." unique_id=655873601]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("1_4lrxx")
expand_mode = 1
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="." unique_id=1736025125]
visible = false
z_index = 2
layout_mode = 0
offset_left = -24.0
offset_top = -6.0
offset_right = 56.0
offset_bottom = 9.0
rotation = -0.388543
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
max_value = 3.0
show_percentage = false

[node name="SlotsContainer" type="HBoxContainer" parent="." unique_id=152351076]
z_index = 2
layout_mode = 0
offset_left = -42.0
offset_top = -9.000002
offset_right = 66.0
offset_bottom = 25.999998
rotation = -0.3963797
theme_override_constants/separation = 8

[node name="PaperSlot" type="Panel" parent="SlotsContainer" unique_id=1421824237]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="PlusLabel" type="Label" parent="SlotsContainer/PaperSlot" unique_id=1211333045]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="SlotsContainer/PaperSlot" unique_id=781793165]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ServiceSlot" type="Panel" parent="SlotsContainer" unique_id=19828659]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="PlusLabel" type="Label" parent="SlotsContainer/ServiceSlot" unique_id=1565768907]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="SlotsContainer/ServiceSlot" unique_id=591334471]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DocumentSlot" type="Control" parent="." unique_id=1911184082]
visible = false
z_index = 2
anchors_preset = 0
offset_left = 160.0
offset_top = -30.0
offset_right = 220.0
offset_bottom = 30.0
